force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>External Work Order Information</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>