force-app/main/default/objects/Work_Order__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <formula>Account_Name__r.BillingState</formula>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>