force-app/main/default/objects/Work_Order__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <formula>Account_Name__r.BillingStreet</formula>
    <label>Account Billing Street</label>
    <type>Text</type>
</CustomField>