force-app/main/default/objects/Work_Order__c/fields/Account_Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Zip_Code__c</fullName>
    <formula>Account_Name__r.BillingPostalCode</formula>
    <label>Account Billing Zip Code</label>
    <type>Text</type>
</CustomField>