force-app/main/default/objects/Work_Order__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <formula>Account_Name__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>