force-app/main/default/objects/Work_Order__c/fields/Account_Invoice_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Invoice_Email_1__c</fullName>
    <formula>Account_Name__r.Invoice_Email_1__c</formula>
    <label>Account Invoice Email 1</label>
    <type>Text</type>
</CustomField>