force-app/main/default/objects/Work_Order__c/fields/Additional_Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice_Notes__c</fullName>
    <inlineHelpText>Post cleaning describe any blemishes remain and include location.  Ex: colored stains, bleach, burns, banding.    AC/Heater on high setting. Extensive notes for work order items.</inlineHelpText>
    <label>Invoice Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>