force-app/main/default/objects/Work_Order__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>Lock Box/key/key pad Combo/location, special instructions, collect payment requirement.</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>