force-app/main/default/objects/Work_Order__c/fields/Adjusted_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Labor_Hours__c</fullName>
    <inlineHelpText>When total labor hours is incorrect and needs a manual adjustment, put positive or negative numbers here</inlineHelpText>
    <label>Adjusted Labor Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>