force-app/main/default/objects/Work_Order__c/fields/Apt_2bd_hall_liv_rm1__c.field-meta.xml
<CustomField>
    <fullName>Apt_2bd_hall_liv_rm1__c</fullName>
    <formula>IF(Owner:User.ProfileId = &apos;00e1P000000Zli9&apos; , Owner:User.Contact.Account.X2_BD_Apt_Condo_cost__c , $CustomMetadata.C__mdt.D.X2BD_Apt_Condo_cost__c )</formula>
    <inlineHelpText>Assuming full condo 2 BD, Liv, Din, Hall etc. Use lowest price between this and Est. Cost</inlineHelpText>
    <label>2BD Apt/Condo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>