force-app/main/default/objects/Work_Order__c/fields/Assigned_Business__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Assigned Business)</relationshipLabel>
    <relationshipName>Work_Orders_Business</relationshipName>
    <type>Lookup</type>
</CustomField>