force-app/main/default/objects/Work_Order__c/fields/Assigned_Business_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Business_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Business User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_OrdersAssigned_Business</relationshipName>
    <type>Lookup</type>
</CustomField>