force-app/main/default/objects/Work_Order__c/fields/Balance_Due1__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due1__c</fullName>
    <formula>Sub_Total__c - Discount_Amount_NEW__c + (Tax__c * (Sub_Total__c - Discount_Amount_NEW__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>