force-app/main/default/objects/Work_Order__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <label>Balance Due:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>