force-app/main/default/objects/Work_Order__c/fields/Billable_per_Labor_Hour__c.field-meta.xml
<CustomField>
    <fullName>Billable_per_Labor_Hour__c</fullName>
    <formula>Balance_Due1__c  /  Total_Labor_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance Due/ Total Labor Hours</inlineHelpText>
    <label>Billable per Labor Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>