force-app/main/default/objects/Work_Order__c/fields/Billing_City2__c.field-meta.xml
<CustomField>
    <fullName>Billing_City2__c</fullName>
    <formula>CreatedBy.Account_Billing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>