force-app/main/default/objects/Work_Order__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <formula>CreatedBy.Account_Billing_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>