force-app/main/default/objects/Work_Order__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>CreatedBy.Account_Billing_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>