force-app/main/default/objects/Work_Order__c/fields/Billing_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal__c</fullName>
    <formula>CreatedBy.Account_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Zip/Postal</label>
    <type>Text</type>
</CustomField>