force-app/main/default/objects/Work_Order__c/fields/BL_Cheat_Sheet1__c.field-meta.xml
<CustomField>
    <fullName>BL_Cheat_Sheet1__c</fullName>
    <formula>&quot;Location, Size, Quantity, Severity &amp; Lighting Conditions. Send photos to customer email and smartphoto@smartcarpetcare.com&quot;</formula>
    <label>BL Cheat Sheet</label>
    <type>Text</type>
</CustomField>