force-app/main/default/objects/Work_Order__c/fields/Blacklight_findings__c.field-meta.xml
<CustomField>
    <fullName>Blacklight_findings__c</fullName>
    <inlineHelpText>Location, Size, Quantity, Severity, and Lighting Conditions if poor</inlineHelpText>
    <label>Blacklight findings:</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>