force-app/main/default/objects/Work_Order__c/fields/Blacklight_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Blacklight_Inspection__c</fullName>
    <label>Blacklight Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blacklight Inspection with Full Report + Photos</fullName>
            </value>
            <value>
                <fullName>Blacklight Inspection with Brief Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>