force-app/main/default/objects/Work_Order__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <inlineHelpText>If you need field crews to call before arrival please enter contact name.</inlineHelpText>
    <label>CA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>