force-app/main/default/objects/Work_Order__c/fields/CA_Display__c.field-meta.xml
<CustomField>
    <fullName>CA_Display__c</fullName>
    <formula>IF(NOT(ISBLANK( Site_Mgn__c )), Site_Mgn__c, NULL) &amp; &quot; &quot; &amp; 
IF(NOT(ISBLANK( Team_Members_3__c )), Team_Members_3__c, NULL) &amp; &quot; &quot; &amp; 
IF(NOT(ISBLANK( CA__c )),IMAGE(&quot;/servlet/servlet.ImageServer?id=0151a000000tHd0&amp;oid=00D1a000000IiC1&amp;lastMod=1458840542000&quot;, &quot;phone&quot;,20,20)  &amp; &quot;  &quot; &amp; CA__c &amp; &quot; &quot;&amp;  CA_Phone_Number__c, NULL ) &amp; &quot; &quot;
&amp;
IF(NOT(ISBLANK( Time_Frame__c )), IMAGE(&quot;/servlet/servlet.ImageServer?id=0151a000000tHcv&amp;oid=00D1a000000IiC1&amp;lastMod=1458840400000&quot;, &quot;Clock&quot;,20,20) &amp; &quot;  &quot;&amp; Time_Frame__c, NULL) &amp; &quot;, &quot;
&amp;
IF(NOT(ISBLANK( Account_Name__c )), Account_Name__r.Name  &amp;&quot;,&quot; , NULL) &amp; &quot; &quot; &amp; 
IF(NOT(ISBLANK( LB_Combo1__c)), LB_Combo1__c &amp;&quot;,&quot; , NULL) &amp; &quot; &quot; &amp;
IF(NOT(ISBLANK( TEXT(Key__c))), TEXT(Key__c) &amp;&quot;,&quot; , NULL) &amp; &quot; &quot; &amp;

IF(NOT(ISBLANK( Property_Address__c )),IMAGE(&quot;/servlet/servlet.ImageServer?id=0151a000000Xg91&amp;oid=00D1a000000IiC1&amp;lastMod=1467652611000&quot;, &quot;Home&quot;,20,20) &amp; &quot;  &quot;&amp; Property_Address__c, NULL)&amp; 
IF(NOT(ISBLANK( Unit_Number__c )), &quot; Unit&quot; &amp; &quot; &quot; &amp; Unit_Number__c &amp; &quot;,&quot;, NULL) &amp; &quot; &quot; &amp; 
IF(NOT(ISBLANK(Property_City__c)),&quot;&quot; &amp; &quot; &quot; &amp; Property_City__c , NULL)&amp; &quot; &quot; &amp;
IF(NOT(ISBLANK(Man_Hrs__c)),&quot; Est. Hrs&quot; &amp; &quot; &quot; &amp; Man_Hrs__c &amp;&quot;,&quot;, NULL)</formula>
    <label>CA Display</label>
    <type>Text</type>
</CustomField>