force-app/main/default/objects/Work_Order__c/fields/CA_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_Phone_Number__c</fullName>
    <inlineHelpText>If the customer needs to be called ahead of time, enter phone number here</inlineHelpText>
    <label>CA Phone Number</label>
    <type>Phone</type>
</CustomField>