force-app/main/default/objects/Work_Order__c/fields/Call_Backs__c.field-meta.xml
<CustomField>
    <fullName>Call_Backs__c</fullName>
    <inlineHelpText>If customer calls back due to job not being done in a satisfactory way. Date of callback, Team member initials, Determination- Justified or Unjustified, nature of complaint, return visit date and time, who was present, describe issues, remedies, outcome</inlineHelpText>
    <label>Call Backs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>