force-app/main/default/objects/Work_Order__c/fields/Cell_Phone_P__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone_P__c</fullName>
    <description>Pulls from Account_Name__r.Cell_Phone__c</description>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>