force-app/main/default/objects/Work_Order__c/fields/Check_Received__c.field-meta.xml
<CustomField>
    <fullName>Check_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did Front Office receive check/cash?</inlineHelpText>
    <label>Check/Cash Received?</label>
    <type>Checkbox</type>
</CustomField>