force-app/main/default/objects/Work_Order__c/fields/Cleaning_products_or_air_frag_present__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_products_or_air_frag_present__c</fullName>
    <label>Cleaning products or air frag. present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>