force-app/main/default/objects/Work_Order__c/fields/Click_on_time_per_labor_Hr__c.field-meta.xml
<CustomField>
    <fullName>Click_on_time_per_labor_Hr__c</fullName>
    <formula>(  Total_Net_Click_On_Time__c  /  Total_Labor_Hours__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Net Click on Time/ Total Labor Hours</inlineHelpText>
    <label>Click On Time per Labor Hr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>