force-app/main/default/objects/Work_Order__c/fields/Clone_Lead_Description_Man_Hrs_Updated__c.field-meta.xml
<CustomField>
    <fullName>Clone_Lead_Description_Man_Hrs_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insures 3 fields in each IC will be addressed when IC is Invoiced</description>
    <inlineHelpText>Fill in the fields Commercial Man Hrs, Lead Description in Accounts with the Start Date for the IC, and then Clone the IC</inlineHelpText>
    <label>Clone/Lead Description/Man Hrs Updated</label>
    <type>Checkbox</type>
</CustomField>