force-app/main/default/objects/Work_Order__c/fields/Comment_WO2__c.field-meta.xml
<CustomField>
    <fullName>Comment_WO2__c</fullName>
    <formula>/*
SUBSTITUTE((
TEXT (Unit_Type__c ) &amp; &quot;, &quot; &amp; 
TEXT (Number_of_bedrooms__c) &amp; &quot;, &quot; &amp; 
TEXT (MBD__c)&amp; &quot;, &quot; &amp; 
TEXT (Living_rm__c )&amp; &quot;, &quot; &amp; 
TEXT (Dining_rm__c )&amp; &quot;, &quot; &amp; 
TEXT (Hall__c )&amp; &quot;, &quot; &amp; 
TEXT (Family_rm__c )&amp; &quot;, &quot; &amp; 
TEXT (Office__c )&amp; &quot;, &quot; &amp; 
TEXT (Stairs__c )&amp; &quot;, &quot; &amp; 
TEXT (Rec_rm_Great_rm__c )&amp; &quot;, &quot; &amp; 
TEXT (Loft__c)),&quot;, , &quot;,&quot;&quot;)
*/

IF( 
NOT(ISPICKVAL(Status__c, &quot;&quot;)) ,
&quot;Unit &quot;&amp;
CASE((Unit_Number__c),&quot;&quot;,&quot;&quot;, Unit_Number__c+ &quot;, &quot;) &amp;

CASE((TEXT (Unit_Type__c )),&quot;&quot;,&quot;&quot;,  TEXT (Unit_Type__c )+&quot;, &quot; )&amp;
CASE((TEXT (Number_of_bedrooms__c)),&quot;&quot;, &quot;&quot;,TEXT (Number_of_bedrooms__c)+&quot;, &quot;)&amp;
CASE((TEXT (MBD__c)), &quot;&quot;,&quot;&quot;, TEXT (MBD__c)+&quot;, &quot;)&amp;
CASE((TEXT (Living_rm__c )),&quot;&quot; ,&quot;&quot;,TEXT (Living_rm__c )+&quot;, &quot;)&amp;
CASE((TEXT (Dining_rm__c )),&quot;&quot;,&quot;&quot;,TEXT (Dining_rm__c ) +&quot;, &quot; )&amp;
CASE((TEXT (Hall__c )),&quot;&quot;,&quot;&quot;,TEXT (Hall__c )+&quot;, &quot; )&amp;
CASE((TEXT (Family_rm__c )),&quot;&quot;,&quot;&quot;,TEXT (Family_rm__c )+&quot;, &quot; )&amp;
CASE((TEXT (Office__c )),&quot;&quot;,&quot;&quot;,TEXT (Office__c )+&quot;, &quot; )&amp;
CASE((TEXT (Stairs__c )),&quot;&quot;, &quot;&quot;,TEXT (Stairs__c )+&quot;, &quot; )&amp;
CASE((TEXT (Rec_rm_Great_rm__c )),&quot;&quot;, &quot;&quot;,TEXT (Rec_rm_Great_rm__c )+&quot;, &quot; )&amp;
CASE((TEXT (Loft__c )),&quot;&quot;,&quot;&quot;, TEXT (Loft__c )), 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comment-WO</label>
    <type>Text</type>
</CustomField>