force-app/main/default/objects/Work_Order__c/fields/Comments_Field_Crew_View__c.field-meta.xml
<CustomField>
    <fullName>Comments_Field_Crew_View__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Scheduled&quot;) , &quot;Scheduled&quot;, Null)</formula>
    <label>Comments Field Crew View</label>
    <type>Text</type>
</CustomField>