force-app/main/default/objects/Work_Order__c/fields/Commercial_IC__c.field-meta.xml
<CustomField>
    <fullName>Commercial_IC__c</fullName>
    <label>Commercial IC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>