force-app/main/default/objects/Work_Order__c/fields/Community_User_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Account_Name__c</fullName>
    <formula>CreatedBy.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community User Account Name</label>
    <type>Text</type>
</CustomField>