force-app/main/default/objects/Work_Order__c/fields/Community_User_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Office_Number__c</fullName>
    <formula>CreatedBy.Account_Office_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community User Office Number</label>
    <type>Text</type>
</CustomField>