force-app/main/default/objects/Work_Order__c/fields/Compensation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Percentage__c</fullName>
    <label>Compensation %</label>
    <summarizedField>Work_Order_Rep__c.Commission_Percentage__c</summarizedField>
    <summaryForeignKey>Work_Order_Rep__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>