force-app/main/default/objects/Work_Order__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>Latest date to clean carpet</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>