force-app/main/default/objects/Work_Order__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Heavily Soiled</fullName>
            </value>
            <value>
                <fullName>Trashed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>