force-app/main/default/objects/Work_Order__c/fields/Copy_Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>Copy_Account_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Account Discount</label>
    <type>Checkbox</type>
</CustomField>