force-app/main/default/objects/Work_Order__c/fields/Copy_Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Copy_Billing_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Account Address &amp; Work Detail Info</label>
    <type>Checkbox</type>
</CustomField>