force-app/main/default/objects/Work_Order__c/fields/Date_Stamp_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Start_Time__c</fullName>
    <label>Date Stamp Start Time</label>
    <type>DateTime</type>
</CustomField>