force-app/main/default/objects/Work_Order__c/fields/Desciption__c.field-meta.xml
<CustomField>
    <fullName>Desciption__c</fullName>
    <label>Desciption (Inactive)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>