force-app/main/default/objects/Work_Order__c/fields/Desciption_del__c.field-meta.xml
<CustomField>
    <fullName>Desciption_del__c</fullName>
    <formula>Account_Name__r.Field_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desciption</label>
    <type>Text</type>
</CustomField>