force-app/main/default/objects/Work_Order__c/fields/Dining_rm__c.field-meta.xml
<CustomField>
    <fullName>Dining_rm__c</fullName>
    <label>Dining rm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Dining rm</fullName>
            </value>
            <value>
                <fullName>2 Dining rms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>