force-app/main/default/objects/Work_Order__c/fields/Direct_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Deposit</label>
    <type>Checkbox</type>
</CustomField>