force-app/main/default/objects/Work_Order__c/fields/Discount_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_2__c</fullName>
    <formula>CASE(TEXT(Discount__c),
&quot;Discount 5%&quot;, 0.05, &quot;First Time Customer Discount 10%&quot;, 0.10,
&quot;Preferred Customer Discount 10%&quot;,0.10,
&quot;Special Appreciation Discount 25%&quot;,0.25,
 &quot;Golden Customer Discount 50%&quot;,0.5,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount % 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>