force-app/main/default/objects/Work_Order__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>If you have a % that does not appear in the drop down list, select custom at the bottom and then fill in the Discount % field with the percentage you want to apply.</inlineHelpText>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5% Discount</fullName>
            </value>
            <value>
                <fullName>First Time Customer 10% Discount</fullName>
            </value>
            <value>
                <fullName>Preferred Customer 10% Discount</fullName>
            </value>
            <value>
                <fullName>Special Appreciation 25% Discount</fullName>
            </value>
            <value>
                <fullName>Golden Customer 50% Discount</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>