force-app/main/default/objects/Work_Order__c/fields/Discount_Amount_NEW__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_NEW__c</fullName>
    <formula>IF(ISPICKVAL(Discount__c, &quot;5% Discount&quot;),  Sub_Total__c*0.05,
IF(ISPICKVAL(Discount__c, &quot;First Time Customer 10% Discount&quot;),  Sub_Total__c*0.10,
IF(ISPICKVAL(Discount__c, &quot;Preferred Customer 10% Discount&quot;),  Sub_Total__c*0.10,
IF(ISPICKVAL(Discount__c, &quot;Special Appreciation 25% Discount&quot;),  Sub_Total__c*0.25,
IF(ISPICKVAL(Discount__c, &quot;Golden Customer 50% Discount&quot;),  Sub_Total__c*0.50,
IF(ISPICKVAL(Discount__c, &quot;Custom&quot;),  Sub_Total__c*Discount_Percentage__c,
null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>