force-app/main/default/objects/Work_Order__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <inlineHelpText>Use this field only when you have selected &quot;Custom&quot; in Discount field above.  Then put in the % that you want to apply.</inlineHelpText>
    <label>Discount %</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>