force-app/main/default/objects/Work_Order__c/fields/Door_Windows_open__c.field-meta.xml
<CustomField>
    <fullName>Door_Windows_open__c</fullName>
    <label>Door/Windows open</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>