force-app/main/default/objects/Work_Order__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Band width for calendar event</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>